--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,11 +1123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-162a7b75a25a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-162a7b75a25a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    text_values = [cities(0:3)]\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "text_values = [cities(0:)]\n",
+    "text_values = [cities(0:3)]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
