--- a/index.ipynb
+++ b/index.ipynb
@@ -1136,7 +1136,7 @@
     }
    ],
    "source": [
-    "text_values = [cities0:'1','2')]\n",
+    "text_values = [cities:]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
