--- a/index.ipynb
+++ b/index.ipynb
@@ -2047,7 +2047,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = ci\n",
+    "area_values = cities[1]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
